--- a/index.html
+++ b/index.html
@@ -3,23 +3,37 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="prime_peer_jq_01.js" type="text/javascript"></script>
+
 		<meta name="description" content="Webpage">
 	</head>
 
 	<body>
+		<p class="spy">Spy Creator</p>
+		<div id = "content">
+			<div>
+
 		<div id="button">
-			<button id="randomize">Randomize!</button>
+			<button id="randomize">Who shall we be today?!</button>
 		</div>
 		<div id = "outputPeople">
+			<!-- The Names -->
 		</div>
 		<div id = "outputPeople1">
+			<!-- The Ages -->
 		</div>
 		<div id = "outputPeople2">
+			<!-- The Weights -->
 		</div>
 		<div id = "outputPeople3">
+			<!-- The Genders -->
 		</div>
+		<div id = "goForth">
+			<!-- Message -->
+		</div>
+	</div>
 
 		
 	</body>
